--- a/.gitignore
+++ b/.gitignore
@@ -209,3 +209,8 @@ RESUMEN_IMPLEMENTACION.md
 README_INTERACTIVE_APP.md
 .gitignore
 *.md
+results/3Q.png
+results/3F2.png
+results/3filtration.png
+results/3BF2.png
+results/3Bfiltration.png
